small z-index bug fixed for contact modal

--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@
     top:0px;
     left:0px;
     background:rgba(0,0,0,0.75);
+    z-index: 999999;
 }
 
 .popup-inner {
